SpringBoot 汪云飞 ：Spring -SpringMVC

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#product environment log
+#product environment profile
 #spring.profiles.active=pro
-#develop environment log
+#develop environment profile
 spring.profiles.active=dev
 
-#database connection pool type
+#database connection pool type:HikariCP
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 #datasource params
@@ -26,11 +26,16 @@ spring.datasource.time-between-eviction-runs-millis=18800
 
 #mybatis config： entity scan package;
 #                 mapperXml locations;
-#mapper interface scan :see @Mapper
+#mapper interface scan :use @Mapper in class Or @MapperScan IN SpringBootApplication start
 mybatis.mapper-locations=classpath*:mybatis/mapperXml/*Mapper.xml
 #mybatis.type-aliases-package=com.example.model
 mybatis.config-location=classpath:mybatis-config.xml
 
+
+#AOP
+#use default autoConfiguration
+#do not need @EnableAspectJAutoProxy when use this
+spring.aop.auto=true
 
 #thymeleaf
 ###THYMELEAF (ThymeleafAutoConfiguration)
