--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<repositories>
+		<repository>
+			<id>mvn</id>
+			<name> Mvn Repository</name>
+			<url>http://mvnrepository.com/</url>
+		</repository>
 		<!-- 开源中国-->
 		<repository>
 			<id>oschina</id>
@@ -31,11 +36,6 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
-		</repository>
-		<repository>
-			<id>mvn</id>
-			<name> Mvn Repository</name>
-			<url>http://mvnrepository.com/</url>
 		</repository>
 	</repositories>
 	<parent>
@@ -65,6 +65,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+            <!-- 引入AOP-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
 		<!-- MYSQL 数据库驱动 -->
@@ -102,6 +107,13 @@
 			<artifactId>pagehelper</artifactId>
 			<version>4.1.0</version>
 		</dependency>
+
+		<!--<dependency>-->
+			<!--<groupId>commons.io</groupId>-->
+			<!--<artifactId>commons.io</artifactId>-->
+			<!--&lt;!&ndash;<version>2.5</version>&ndash;&gt;-->
+		<!--</dependency>-->
+
 		<!-- 测试模块-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
