异步请求支持，类型安全的参数配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,23 @@
 #develop environment profile
 spring.profiles.active=dev
 
+#thymeleaf
+###THYMELEAF (ThymeleafAutoConfiguration)
+########################################################
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#spring.thymeleaf.mode=HTML5
+#spring.thymeleaf.encoding=UTF-8
+# ;charset=<encoding> is added
+#spring.thymeleaf.content-type=text/html
+# set to false for hot refresh
+spring.thymeleaf.cache=false
+
+#异步请求超时设置
+spring.mvc.async.request-timeout=36000
+
+
+
 #database connection pool type:HikariCP
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
@@ -37,20 +54,9 @@ mybatis.config-location=classpath:mybatis-config.xml
 #do not need @EnableAspectJAutoProxy when use this
 spring.aop.auto=true
 
-#thymeleaf
-###THYMELEAF (ThymeleafAutoConfiguration)
-########################################################
-#spring.thymeleaf.prefix=classpath:/templates/
-#spring.thymeleaf.suffix=.html
-#spring.thymeleaf.mode=HTML5
-#spring.thymeleaf.encoding=UTF-8
-# ;charset=<encoding> is added
-#spring.thymeleaf.content-type=text/html
-# set to false for hot refresh
-
-spring.thymeleaf.cache=false
 
 
 
 #otherparams
 testParam = a
+project.name = zfGod
