--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,9 @@
+#start debug you can see autoConfigure in console logs
+#debug=true
 
 server.port=8088
 server.context-path=/
+#50分钟
+server.session.timeout=180000
 
 testParams = b
