去掉网络原因手动添加的spring-message,spring-websocket依赖，留spring-boot-starter-webSocket

--- a/pom.xml
+++ b/pom.xml
@@ -122,14 +122,14 @@
         <artifactId>spring-boot-starter-websocket</artifactId>
         <!--<version>1.4.1.RELEASE</version>-->
         </dependency>
-        <dependency>
+    <!--    <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-messaging</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-websocket</artifactId>
-        </dependency>
+        </dependency>-->
 
         <!-- 测试模块-->
         <dependency>
