webSocket 广播式；springboot单元测试；springboot缓存（0.5)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,14 +53,21 @@ mybatis.mapper-locations=classpath*:mybatis/mapperXml/*Mapper.xml
 mybatis.config-location=classpath:mybatis-config.xml
 
 
+#security 关闭
+security.basic.enabled=false
+management.security.enabled=false
+
 #AOP
 #use default autoConfiguration
 #do not need @EnableAspectJAutoProxy when use this
 spring.aop.auto=true
 
 
+#cache
+
+#spring.cache.cache-names[]=
 
 
 #otherparams
 testParam = a
-project.name = zfGod
+project.name = demo1
