--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,6 +57,12 @@ mybatis.config-location=classpath:mybatis-config.xml
 security.basic.enabled=false
 management.security.enabled=false
 
+#security.user.name=user
+#security.user.password=user
+#security.user.role=User
+#security.ignored=/angular/**,/bootstrap/**,/jq/**,/lib/**,/pics/**,/view/**
+
+
 #AOP
 #use default autoConfiguration
 #do not need @EnableAspectJAutoProxy when use this
@@ -71,3 +77,11 @@ spring.aop.auto=true
 #otherparams
 testParam = a
 project.name = demo1
+
+#security+jpa
+#logging.level.org.springframework.security = INFO
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+#springBatch
+spring.batch.job.enabled=false
