thymeleaf 模板返回路径修改； jpa注解jar包冲突去除； csv文件batch操作实现上传文件-读取-插入数据

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,12 @@
 #start debug you can see autoConfigure in console logs
 #debug=true
+#in develop
+
+#datasource params
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 server.port=8088
 server.context-path=/
@@ -9,3 +16,5 @@ server.session.timeout=380000
 testParams = b
 
 importData.File_TYPE=.csv,.xml,.txt,.excel
+
+bath.file.repository=D:/uploadTest/batchFiles
