--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,16 @@
     <groupId>com.example</groupId>
     <artifactId>springBootDemo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>springBootDemo</name>
     <description>Demo project for Spring Boot</description>
     <properties>
          <!-- The main class to start by executing java -jar
          if Unable to find a single main class from the following candidates
-         choose com.example.DemoApplication-->
+         choose com.example.DemoApplication
+         告知启动类
+         -->
         <start-class>com.example.DemoApplication</start-class>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,6 +23,7 @@
         <java.version>1.8</java.version>
     </properties>
     <repositories>
+
        <repository>
            <id>nexus</id>
            <name>Human Readable Name for this Mirror.</name>
@@ -81,6 +84,8 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
+            <!-- jar包转war包需要-->
+            <!--<scope>provided</scope>-->
         </dependency>
         <!-- thymeleaf -->
         <dependency>
@@ -187,11 +192,12 @@
             <artifactId>persistence-api</artifactId>
             <version>1.0.2</version>
         </dependency>
-        <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.0-api</artifactId>
-            <version>1.0.1.Final</version>
-        </dependency>
+        <!-- hibernate-validator 里面包含hibernate-jpa-2.1-api,多版本会出问题-->
+        <!--<dependency>-->
+            <!--<groupId>org.hibernate.javax.persistence</groupId>-->
+            <!--<artifactId>hibernate-jpa-2.0-api</artifactId>-->
+            <!--<version>1.0.1.Final</version>-->
+        <!--</dependency>-->
         <!-- 模板热部署-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -215,12 +221,20 @@
 
     <build>
         <finalName>springBootDemo</finalName>
-       <!-- <resources>
+        <resources>
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
-        </resources>-->
+            <resource>
+                <directory>${basedir}/src/main/webapp</directory>
+                <!--注意此次必须要放在此目录下才能被访问到-->
+                <targetPath>META-INF/resources</targetPath>
+                <includes>
+                    <include>**/**</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -229,11 +243,16 @@
                     <fork>true</fork>
                 </configuration>
             </plugin>
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-war-plugin</artifactId>-->
-                <!--<version>2.6</version>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <includes>
+                        <include>/test/*</include>
+                    </includes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
