--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -1,5 +1,22 @@
+#start debug you can see autoConfigure in console logs
+#debug=true
+#in product
 
-server.port=80
+#datasource params
+spring.datasource.url=jdbc:mysql://180.97.75.134:3306/springboot
+spring.datasource.username=root
+spring.datasource.password=ycmediamdb.134
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+server.port=8099
 server.context-path=/
-
 testParams = c
+
+#50分钟
+server.session.timeout=380000
+
+
+
+importData.File_TYPE=.csv,.xml,.txt,.excel
+
+bath.file.repository=/opt/upload/batchfiles
