--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,11 +27,7 @@ spring.mvc.async.request-timeout=36000
 #database connection pool type:HikariCP
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
-#datasource params
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 
 spring.datasource.maximum-pool-size=80
 spring.datasource.max-idle=15
@@ -83,5 +79,5 @@ project.name = demo1
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 
-#springBatch
+#springBatch  关闭自动执行,通过显示的调用触发：请求触发
 spring.batch.job.enabled=false
