--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,3 +81,8 @@ project.name = demo1
 
 #springBatch  关闭自动执行,通过显示的调用触发：请求触发
 spring.batch.job.enabled=false
+
+#jms-activemq
+#消息发送与接收通常在两个系统中，一个系统内部也可以使用
+spring.activemq.broker-url=tcp://localhost:61616
+
