--- a/pom.xml
+++ b/pom.xml
@@ -214,22 +214,26 @@
         </dependency>
 
         <!-- jms之activeMQ-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
         <!-- 嵌入程序-->
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-broker</artifactId>
-            <!--<version>5.7.0</version>-->
-        </dependency>
-        <!--spring-jms -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jms</artifactId>
-        </dependency>
-        <!-- client-->
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-client</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.activemq</groupId>-->
+            <!--<artifactId>activemq-broker</artifactId>-->
+            <!--&lt;!&ndash;<version>5.7.0</version>&ndash;&gt;-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash;spring-jms &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework</groupId>-->
+            <!--<artifactId>spring-jms</artifactId>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; client&ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.activemq</groupId>-->
+            <!--<artifactId>activemq-client</artifactId>-->
+        <!--</dependency>-->
 
     </dependencies>
 
