--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -83,6 +83,22 @@ project.name = demo1
 spring.batch.job.enabled=false
 
 #jms-activemq
-#消息发送与接收通常在两个系统中，一个系统内部也可以使用
+#消息发送与接收通常在两个系统中,一个系统内部也可以使用
 spring.activemq.broker-url=tcp://localhost:61616
-
+spring.activemq.user=admin
+spring.activemq.password=admin
+spring.activemq.in-memory=true
+spring.activemq.pool.max-connections=5
+spring.activemq.pool.idle-timeout=30000
+#spring.jms.pub-sub-domain: false for queue(default) , true for topic
+spring.jms.pub-sub-domain=true
+# Start the container automatically on startup.
+spring.jms.listener.auto-startup=true
+#Acknowledge mode of the container. By default, the listener is transacted with automatic acknowledgment.
+#automatic acknowledgment：自动告知收到 AUTO_ACKNOWLEDGE = 1
+#client acknowledgment:自定义告知收到 = 2
+#spring.jms.listener.acknowledge-mode =
+# Minimum number of concurrent consumers.指定最小的并发消费者数量.
+spring.jms.listener.concurrency=1
+ # Maximum number of concurrent consumers.指定最大的并发消费者数量.
+spring.jms.listener.max-concurrency=1
