springboot jms activemq

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,3 +18,5 @@ testParams = b
 importData.File_TYPE=.csv,.xml,.txt,.excel
 
 bath.file.repository=D:/uploadTest/batchFiles
+
+jms.broker.url=tcp://localhost:61616?jms.optimizeAcknowledge=true&jms.optimizeAcknowledgeTimeOut=30000&jms.redeliveryPolicy.maximumRedeliveries=2
