--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -84,14 +84,20 @@ spring.batch.job.enabled=false
 
 #jms-activemq
 #消息发送与接收通常在两个系统中,一个系统内部也可以使用
-spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.broker-url=tcp://localhost:61616?jms.optimizeAcknowledge=true&jms.optimizeAcknowledgeTimeOut=30000&jms.redeliveryPolicy.maximumRedeliveries=2
 spring.activemq.user=admin
 spring.activemq.password=admin
 spring.activemq.in-memory=true
 spring.activemq.pool.max-connections=5
 spring.activemq.pool.idle-timeout=30000
+#ObjectMessage 需要添加信任名单
+spring.activemq.packages.trust-all=true
+spring.activemq.packages.trusted=sys.model,com.example.model
+#信任名单
 #spring.jms.pub-sub-domain: false for queue(default) , true for topic
 spring.jms.pub-sub-domain=true
+#acknowledge-mode--暂时不明白一直报错,需要的类型不是string,但是这里只能传string参数,应该是缺陷吧
+#spring.jms.listener.acknowledge-mode=CLIENT(2)
 # Start the container automatically on startup.
 spring.jms.listener.auto-startup=true
 #Acknowledge mode of the container. By default, the listener is transacted with automatic acknowledgment.
