--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@
 #develop environment profile
 spring.profiles.active=dev
 
+#Encoding
+spring.messages.encoding=UTF-8
+spring.http.encoding.charset=UTF-8
+
 #thymeleaf
 ###THYMELEAF (ThymeleafAutoConfiguration)
 ########################################################
@@ -18,7 +22,7 @@ spring.thymeleaf.cache=false
 
 
 
-#异步请求超时设置
+#\u5F02\u6B65\u8BF7\u6C42\u8D85\u65F6\u8BBE\u7F6E
 spring.mvc.async.request-timeout=36000
 
 
@@ -41,15 +45,15 @@ spring.datasource.test-while-idle=true
 spring.datasource.time-between-eviction-runs-millis=18800
 #spring.datasource.jdbc-interceptors=ConnectionState;SlowQueryReport(threshold=0)
 
-#mybatis config： entity scan package;
-#                 mapperXml locations;
-#mapper interface scan :use @Mapper in class Or @MapperScan IN SpringBootApplication start
+#mybatis config\uFF1A entity scan package;
+#mapper interface scan :use @Mapper in interface Or @MapperScan IN SpringBootApplication start
+#mapperXml locations;
 mybatis.mapper-locations=classpath*:mybatis/mapperXml/*Mapper.xml
 #mybatis.type-aliases-package=com.example.model
 mybatis.config-location=classpath:mybatis-config.xml
 
 
-#security 关闭
+#security \u5173\u95ED
 security.basic.enabled=false
 management.security.enabled=false
 
@@ -79,35 +83,35 @@ project.name = demo1
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 
-#springBatch  关闭自动执行,通过显示的调用触发：请求触发
+#springBatch  \u5173\u95ED\u81EA\u52A8\u6267\u884C,\u901A\u8FC7\u663E\u793A\u7684\u8C03\u7528\u89E6\u53D1\uFF1A\u8BF7\u6C42\u89E6\u53D1
 spring.batch.job.enabled=false
 
 ##jms-activemq start
-#关闭
-##消息发送与接收通常在两个系统中,一个系统内部也可以使用
+#\u5173\u95ED
+##\u6D88\u606F\u53D1\u9001\u4E0E\u63A5\u6536\u901A\u5E38\u5728\u4E24\u4E2A\u7CFB\u7EDF\u4E2D,\u4E00\u4E2A\u7CFB\u7EDF\u5185\u90E8\u4E5F\u53EF\u4EE5\u4F7F\u7528
 #spring.activemq.broker-url=tcp://localhost:61616?jms.optimizeAcknowledge=true&jms.optimizeAcknowledgeTimeOut=30000&jms.redeliveryPolicy.maximumRedeliveries=2
 #spring.activemq.user=admin
 #spring.activemq.password=admin
 #spring.activemq.in-memory=true
 #spring.activemq.pool.max-connections=5
 #spring.activemq.pool.idle-timeout=30000
-##ObjectMessage 需要添加信任名单
+##ObjectMessage \u9700\u8981\u6DFB\u52A0\u4FE1\u4EFB\u540D\u5355
 #spring.activemq.packages.trust-all=true
 #spring.activemq.packages.trusted=sys.model,com.example.model
-##信任名单
+##\u4FE1\u4EFB\u540D\u5355
 ##spring.jms.pub-sub-domain: false for queue(default) , true for topic
 #spring.jms.pub-sub-domain=true
-##acknowledge-mode--暂时不明白一直报错,需要的类型不是string,但是这里只能传string参数,应该是缺陷吧
+##acknowledge-mode--\u6682\u65F6\u4E0D\u660E\u767D\u4E00\u76F4\u62A5\u9519,\u9700\u8981\u7684\u7C7B\u578B\u4E0D\u662Fstring,\u4F46\u662F\u8FD9\u91CC\u53EA\u80FD\u4F20string\u53C2\u6570,\u5E94\u8BE5\u662F\u7F3A\u9677\u5427
 ##spring.jms.listener.acknowledge-mode=CLIENT(2)
 ## Start the container automatically on startup.
 #spring.jms.listener.auto-startup=true
 ##Acknowledge mode of the container. By default, the listener is transacted with automatic acknowledgment.
-##automatic acknowledgment：自动告知收到 AUTO_ACKNOWLEDGE = 1
-##client acknowledgment:自定义告知收到 = 2
+##automatic acknowledgment\uFF1A\u81EA\u52A8\u544A\u77E5\u6536\u5230 AUTO_ACKNOWLEDGE = 1
+##client acknowledgment:\u81EA\u5B9A\u4E49\u544A\u77E5\u6536\u5230 = 2
 ##spring.jms.listener.acknowledge-mode =
-## Minimum number of concurrent consumers.指定最小的并发消费者数量.
+## Minimum number of concurrent consumers.\u6307\u5B9A\u6700\u5C0F\u7684\u5E76\u53D1\u6D88\u8D39\u8005\u6570\u91CF.
 #spring.jms.listener.concurrency=1
-# # Maximum number of concurrent consumers.指定最大的并发消费者数量.
+# # Maximum number of concurrent consumers.\u6307\u5B9A\u6700\u5927\u7684\u5E76\u53D1\u6D88\u8D39\u8005\u6570\u91CF.
 #spring.jms.listener.max-concurrency=1
 
 ##jms-activemq end
