--- a/pom.xml
+++ b/pom.xml
@@ -214,11 +214,11 @@
             <version>3.4</version>
         </dependency>
 
-        <!-- jms之activeMQ-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-activemq</artifactId>-->
-        <!--</dependency>-->
+         <!--jms之activeMQ-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
 
 
     </dependencies>
