--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -89,29 +89,29 @@ spring.batch.job.enabled=false
 ##jms-activemq start
 #\u5173\u95ED
 ##\u6D88\u606F\u53D1\u9001\u4E0E\u63A5\u6536\u901A\u5E38\u5728\u4E24\u4E2A\u7CFB\u7EDF\u4E2D,\u4E00\u4E2A\u7CFB\u7EDF\u5185\u90E8\u4E5F\u53EF\u4EE5\u4F7F\u7528
-#spring.activemq.broker-url=tcp://localhost:61616?jms.optimizeAcknowledge=true&jms.optimizeAcknowledgeTimeOut=30000&jms.redeliveryPolicy.maximumRedeliveries=2
-#spring.activemq.user=admin
-#spring.activemq.password=admin
-#spring.activemq.in-memory=true
-#spring.activemq.pool.max-connections=5
-#spring.activemq.pool.idle-timeout=30000
-##ObjectMessage \u9700\u8981\u6DFB\u52A0\u4FE1\u4EFB\u540D\u5355
-#spring.activemq.packages.trust-all=true
-#spring.activemq.packages.trusted=sys.model,com.example.model
-##\u4FE1\u4EFB\u540D\u5355
-##spring.jms.pub-sub-domain: false for queue(default) , true for topic
-#spring.jms.pub-sub-domain=true
-##acknowledge-mode--\u6682\u65F6\u4E0D\u660E\u767D\u4E00\u76F4\u62A5\u9519,\u9700\u8981\u7684\u7C7B\u578B\u4E0D\u662Fstring,\u4F46\u662F\u8FD9\u91CC\u53EA\u80FD\u4F20string\u53C2\u6570,\u5E94\u8BE5\u662F\u7F3A\u9677\u5427
-##spring.jms.listener.acknowledge-mode=CLIENT(2)
-## Start the container automatically on startup.
-#spring.jms.listener.auto-startup=true
-##Acknowledge mode of the container. By default, the listener is transacted with automatic acknowledgment.
-##automatic acknowledgment\uFF1A\u81EA\u52A8\u544A\u77E5\u6536\u5230 AUTO_ACKNOWLEDGE = 1
-##client acknowledgment:\u81EA\u5B9A\u4E49\u544A\u77E5\u6536\u5230 = 2
-##spring.jms.listener.acknowledge-mode =
-## Minimum number of concurrent consumers.\u6307\u5B9A\u6700\u5C0F\u7684\u5E76\u53D1\u6D88\u8D39\u8005\u6570\u91CF.
-#spring.jms.listener.concurrency=1
-# # Maximum number of concurrent consumers.\u6307\u5B9A\u6700\u5927\u7684\u5E76\u53D1\u6D88\u8D39\u8005\u6570\u91CF.
-#spring.jms.listener.max-concurrency=1
+spring.activemq.broker-url=tcp://localhost:61616?jms.optimizeAcknowledge=true&jms.optimizeAcknowledgeTimeOut=30000&jms.redeliveryPolicy.maximumRedeliveries=2
+spring.activemq.user=admin
+spring.activemq.password=admin
+spring.activemq.in-memory=true
+spring.activemq.pool.max-connections=5
+spring.activemq.pool.idle-timeout=30000
+#ObjectMessage \u9700\u8981\u6DFB\u52A0\u4FE1\u4EFB\u540D\u5355
+spring.activemq.packages.trust-all=true
+spring.activemq.packages.trusted=sys.model,com.example.model
+#\u4FE1\u4EFB\u540D\u5355
+#spring.jms.pub-sub-domain: false for queue(default) , true for topic
+spring.jms.pub-sub-domain = false
+#acknowledge-mode--\u6682\u65F6\u4E0D\u660E\u767D\u4E00\u76F4\u62A5\u9519,\u9700\u8981\u7684\u7C7B\u578B\u4E0D\u662Fstring,\u4F46\u662F\u8FD9\u91CC\u53EA\u80FD\u4F20string\u53C2\u6570,\u5E94\u8BE5\u662F\u7F3A\u9677\u5427
+#spring.jms.listener.acknowledge-mode=CLIENT(2)
+# Start the container automatically on startup.
+spring.jms.listener.auto-startup=true
+#Acknowledge mode of the container. By default, the listener is transacted with automatic acknowledgment.
+#automatic acknowledgment\uFF1A\u81EA\u52A8\u544A\u77E5\u6536\u5230 AUTO_ACKNOWLEDGE = 1
+#client acknowledgment:\u81EA\u5B9A\u4E49\u544A\u77E5\u6536\u5230 = 2
+#spring.jms.listener.acknowledge-mode =
+# Minimum number of concurrent consumers.\u6307\u5B9A\u6700\u5C0F\u7684\u5E76\u53D1\u6D88\u8D39\u8005\u6570\u91CF.
+spring.jms.listener.concurrency=1
+ # Maximum number of concurrent consumers.\u6307\u5B9A\u6700\u5927\u7684\u5E76\u53D1\u6D88\u8D39\u8005\u6570\u91CF.
+spring.jms.listener.max-concurrency=1
 
-##jms-activemq end
+#jms-activemq end
