--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -3,16 +3,16 @@
 #in product
 
 #datasource params
-spring.datasource.url=jdbc:mysql://180.97.75.134:3306/springboot
+spring.datasource.url=jdbc:mysql://ip:3306/springboot
 spring.datasource.username=root
-spring.datasource.password=ycmediamdb.134
+spring.datasource.password=zz
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 server.port=8099
 server.context-path=/
 testParams = c
 
-#50分钟
+#50\u5206\u949F
 server.session.timeout=380000
 
 
