--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,11 @@
             <artifactId>spring-boot-starter-activemq</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.38</version>
+        </dependency>
 
     </dependencies>
 
