--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@
 #in develop
 
 #datasource params
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+spring.datasource.url=jdbc:mysql://10.16.74.59:3306/test
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 server.port=8089
@@ -19,4 +19,4 @@ importData.File_TYPE=.csv,.xml,.txt,.excel
 
 bath.file.repository=D:/uploadTest/batchFiles
 
-jms.broker.url=tcp://localhost:61616?jms.optimizeAcknowledge=true&jms.optimizeAcknowledgeTimeOut=30000&jms.redeliveryPolicy.maximumRedeliveries=2
+#jms.broker.url=tcp://localhost:61616?jms.optimizeAcknowledge=true&jms.optimizeAcknowledgeTimeOut=30000&jms.redeliveryPolicy.maximumRedeliveries=2
